changed font style

--- a/Salesforce Assessment/MichaelKevinAlabiDuobu_ShoppingCart_201105/style.css
+++ b/Salesforce Assessment/MichaelKevinAlabiDuobu_ShoppingCart_201105/style.css
@@ -1,10 +1,6 @@
-@import url('https://fonts.googleapis.com/css?family=Raleway:300,400,700');
-@import url("https://fonts.googleapis.com/css?family=Metal+Mania");
-
 @font-face {
-    font-family: "Booter - Zero Zero";
-    src: url("Fonts/Booter - Zero Zero.woff") format("woff"),
-         url("Fonts/Booter - Zero Zero.woff2") format("woff2");
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    src: ();
     font-weight: normal;
     font-style: normal;
 }
@@ -52,14 +48,24 @@ html, body {
 }
 
 .main-header {
-    background-color: rgba(0, 0, 0, .6);
-    background-image: url("Images/Header Background.jpg");
-    background-blend-mode: multiply;
+    background-color: rgba(53, 47, 47, 0.6);
+    background-image: url("Images/header.jpg");
+    background-blend-mode: soft-light;
     background-size: cover;
-    padding-bottom: 30px;
+    padding-bottom: 50px;
 }
 
+.band-name {
+    text-align: left;
+    margin: 10;
+    font-size: 4em;
+    font-family: "Booter - Zero Zero";
+    font-weight: normal;
+    color: white;
+}
 
+.band-name-large {
+    font-size: 8em;
 }
 
 .content-section {
@@ -72,13 +78,12 @@ html, body {
     padding: 0 1.5em;
 }
 .section-header {
-    font-family: "Metal Mania";
+    font-family: 'Courier New', Courier, monospace;
     font-weight: normal;
     color: #333;
     text-align: center;
     font-size: 2.5em;
 }
-
 
 .btn {
     text-align: center;
@@ -90,8 +95,8 @@ html, body {
 .btn-header {
     margin: .5em 15% 2em 15%;
     color: white;
-    border: 2px solid #2D9CDB;
-    background-color: rgba(255, 255, 255, .1);
+    border: 2px solid hsl(61, 55%, 42%);
+    background-color: rgba(248, 233, 15, 0.1);
     border-radius: 0;
     font-size: 1.5em;
     font-weight: lighter;
@@ -106,7 +111,7 @@ html, body {
 .btn-play {
     display: block;
     margin: 0 auto;
-    color: #2D9CDB;
+    color: #e8f800;
     font-size: 4em;
     border-radius: 50%;
     width: 100px;
@@ -117,14 +122,14 @@ html, body {
 
 .btn-primary {
     color: white;
-    background-color: #56CCF2;
+    background-color: rgb(166, 168, 13);
     border: none;
     border-radius: .3em;
     font-weight: bold;
 }
 
 .btn-primary:hover {
-    background-color: #2D9CDB;
+    background-color: #b7e60d;
 }
 
 .shop-item {
@@ -209,14 +214,14 @@ html, body {
 
 .btn-danger {
     color: white;
-    background-color: #EB5757;
+    background-color: #0cecda;
     border: none;
     border-radius: .3em;
     font-weight: bold;
 }
 
 .btn-danger:hover {
-    background-color: #CC4C4C;
+    background-color: #4cb9cc;
 }
 
 .cart-quantity-input {
